# NEMO-C1D_PAPA32_Bulk

./: README.md
C1D_PAPA32_Bulk.B23/CONFIG/: cpp_C1D_PAPA32_Bulk_B23.fcm
C1D_PAPA32_Bulk.B23/CONFIG/my_src/: inffld.F90  infmod.F90  sbcblk.F90  usrdef_nam.F90  usrdef_zgr.F90
C1D_PAPA32_Bulk.B23/INFERENCES/: main.py  models.py
C1D_PAPA32_Bulk.B23/INFERENCES/AirSeaFluxCode/: CHANGELOG.md  README.md
C1D_PAPA32_Bulk.B23/INFERENCES/AirSeaFluxCode/AirSeaFluxCode/: README.md  setup.cfg  setup.py
C1D_PAPA32_Bulk.B23/INFERENCES/AirSeaFluxCode/AirSeaFluxCode/src/: AirSeaFluxCode.py  AirSeaFluxCode_dev.py  __init__.py  cs_wl_subs.py  flux_subs.py  flux_subs_dev.py  hum_subs.py  util_subs.py
C1D_PAPA32_Bulk.B23/INFERENCES/AirSeaFluxCode/AirSeaFluxCode/src/AirSeaFluxCode.egg-info/: PKG-INFO  SOURCES.txt
C1D_PAPA32_Bulk.B23/POST_PROCESS/: OSP32_obs_S.nc  OSP32_obs_T.nc  plots_diff.py  plots_res.py
C1D_PAPA32_Bulk.B23/RUN/: job.ksh
C1D_PAPA32_Bulk.B23/RUN/FORCING/: forcing_C1D_PAPA_y2010.nc  forcing_C1D_PAPA_y2011.nc  init_PAPASTATION32_m06d15.nc
C1D_PAPA32_Bulk.B23/RUN/NAMELISTS/: namelist_cfg
C1D_PAPA32_Bulk.B23/RUN/XML/: field_def_nemo-oce.xml  file_def_nemo-oce.xml
