[metadata]
name = AiSeaFluxCode
version = 1.1.0
author = sbiri, rcornes, ekent, josidd
author_email = sbiri@noc.ac.uk
description = AirSeaFluxCode is a software designed to allow easy exploration of the different bulk formulae parameterizations and the wide range of implementation options
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NOCSurfaceProcesses/AirSeaFluxCode
project_urls =
    Bug Tracker = https://github.com/NOCSurfaceProcesses/AirSeaFluxCode/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: CCBY License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
